Fixes in the "My Account" page for 2021 theme
- Adjust padding under the "My Account" title (was too big)
- Adjust color of menu items (was too light)
- Adjust thickness of underline on menu items hover (was too thick)
- Add some space between the "Hello" line and the next paragraph

--- a/assets/css/twenty-twenty-one.scss
+++ b/assets/css/twenty-twenty-one.scss
@@ -2616,3 +2616,28 @@ a.reset_variations {
 		}
 	}
 }
+
+
+.post-9 {
+
+	.entry-header {
+
+		padding-bottom: 20px !important;
+	}
+
+	.woocommerce-MyAccount-content {
+
+		p:first-of-type {
+			margin-bottom: 2rem;
+		}
+	}
+
+	.woocommerce-MyAccount-navigation-link a {
+		color: #666 !important;
+
+		&:hover {
+			color: black !important;
+			text-decoration: underline solid black 1px !important;
+		}
+	}
+}
